--- a/learn_webpack/10_vite的基本使用/package.json
+++ b/learn_webpack/10_vite的基本使用/package.json
@@ -4,11 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "lodash-es": "^4.17.21"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.1.5",
+    "less": "^4.1.1",
+    "postcss": "^8.3.6",
+    "postcss-preset-env": "^6.7.0",
+    "vite": "^2.4.4",
+    "vue": "^3.1.5"
   }
 }
